[package]
name = "odbcsv"
version = "1.0.13"
authors = ["Markus Klein"]
edition = "2024"
license = "MIT"
repository = "https://github.com/pacman82/odbcsv/tree/main"
documentation = "https://docs.rs/odbcsv/"

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "Query an ODBC data source and print the result as csv."

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["odbc", "csv", "sql"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["command-line-utilities"]

# This points to a file under the package root (relative to this `Cargo.toml`).
# The contents of this file are stored and indexed in the registry.
# crates.io will render this file and place the result on the crate's page.
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odbc-api = "11.1.1"
csv = "1.3.1"
anyhow = "1.0.97"
stderrlog = "0.6.0"
log = "0.4.26"
clap = { version = "4.5.32", features = ["derive", "env"] }

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.18.0"

